--- a/styles/index.css
+++ b/styles/index.css
@@ -1,6 +1,6 @@
 .top-header {
-margin-left: 10px;
-margin-right: 10px;
+margin-left: 20px;
+/* margin-right: 4px; */
 /* border-style: solid;
 border-width: 1px; */
 position: fixed;
@@ -12,12 +12,18 @@ padding-top: 5px;
 padding-bottom: 5px;
 /* z-index: 3; */
 }
+.search-box {
+    margin-left: 40px;
+    margin-right: 15px;
+    border-style: solid;
+    border-width: 1px;
+}
 .Wannabeer {
     position: fixed;
     top: 300px;
     left: 100px;
     color: white;
-    font-size: 50px;
+    font-size: 60px;
 }
 .img-container {
     background-image: url(../images/barrel.jpg);
@@ -67,6 +73,6 @@ padding-bottom: 5px;
     border-style: solid;
     border-width: 3px;
     margin-left: 5px;
-    padding-top: 100px;
-    padding-bottom: 100px;
+    padding-top: 120px;
+    padding-bottom: 120px;
 }
