--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,9 @@
+html {
+    background-color: #1f2833;
+    color: white;
+}
+
+
 .top-header {
 margin-left: 20px;
 /* margin-right: 4px; */
@@ -11,6 +17,10 @@ font-size: 16px;
 padding-top: 5px;
 padding-bottom: 5px;
 /* z-index: 3; */
+background-color: #1f2833;
+}
+.home-btn, .map-btn, .chart-btn {
+    color: white;
 }
 .search-box {
     margin-left: 40px;
@@ -19,11 +29,11 @@ padding-bottom: 5px;
     border-width: 1px;
 }
 .Wannabeer {
-    position: fixed;
-    top: 300px;
-    left: 100px;
     color: white;
-    font-size: 60px;
+    font-size: 84px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
 }
 .img-container {
     background-image: url(../images/barrel.jpg);
@@ -33,7 +43,8 @@ padding-bottom: 5px;
     background-position: center;
     padding-top: 300px;
     padding-bottom: 300px;
-    /* z-index: 1; */
+    display: flex;
+    flex-direction: column;
 }
 .body-container {
     /* margin-top: 500px; */
@@ -73,6 +84,6 @@ padding-bottom: 5px;
     border-style: solid;
     border-width: 3px;
     margin-left: 5px;
-    padding-top: 120px;
-    padding-bottom: 120px;
+    /* padding-top: 120px;
+    padding-bottom: 120px; */
 }
