--- a/styles/index.css
+++ b/styles/index.css
@@ -31,31 +31,12 @@ body {
     margin-top: 0px;
 }
 .Wannabeer {
-    /* outline: 1px solid red; */
     margin-top: 550px;
     margin-bottom: 0;
 }
-
-
-
 .home-btn, .map-btn, .chart-btn {
     color: white;
 }
-.search-box {
-    margin-left: 40px;
-    margin-right: 15px;
-    border-style: solid;
-    border-width: 1px;
-}
-.Wannabeer {
-    color: white;
-    font-size: 84px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    /* margin-top: 500px; */
-}
-
 .body-container {
     position: relative;
     /* top: 100px; */
@@ -97,15 +78,14 @@ body {
     margin-top: 30px;
 }
 .map {
-    border-style: solid;
-    border-width: 3px;
-    margin-left: 5px;
+    /* border-style: solid;
+    border-width: 3px; */
     /* padding-top: 150px;
     padding-bottom: 150px; */
 }
 .welcome {
-    font-size: 45px;
-    margin-left: 45px;
+    /* font-size: 45px; */
+    /* margin-left: 45px; */
 }
 .near-you {
     margin-left: 100px;
@@ -121,22 +101,10 @@ body {
 .about-btn, .contact-btn {
     color: white;
     font-size: 20px;
-    margin-left: 60px;
+    margin-left: 50px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
-
-/* 
-
-
-
-
-
-
-
-
-
-
-
-*/
 
 
 /* Spinner */
@@ -217,4 +185,81 @@ body {
     100% {
     opacity: 0;
 }
+}
+
+
+
+
+
+@media screen and (min-width: 360px) {
+    /* in here you put the changes you want for this size */
+
+    .Wannabeer {
+        font-size: 72px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .welcome {
+        font-size: 45px;
+        margin-left: 20px;
+    }
+    .near-you {
+        margin-left: 85px;
+    }
+    .map {
+        width: 338.7px;
+        height: 338.7px;
+    }
+
+}
+
+@media screen and (min-width: 678px) {
+    /* in here you put the changes you want for this size */
+    .top-header {
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+    .search-box {
+        width: 300px;
+        margin-left: 120px;
+    }
+    .body-container {
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+    .Wannabeer {
+        margin-top: 570px;
+        font-size: 100px;
+        margin-left: 100px;
+    }
+    .welcome {
+        margin-left: 185px;
+        margin-bottom: 50px;
+    }
+    .near-you {
+        font-size: 25px;
+        margin-left: 220px;
+    }
+    .footer {
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+    .copy-right {
+        margin-left: 230px;
+    }
+    .footer-btn {
+        margin-left: 120px;
+    }
+    .map {
+        width: 500px;
+        height: 500px;
+        margin-left: 55px;
+        box-shadow: 0 0 30px #777777;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    /* in here you put the changes you want for this size */
+
 }
