--- a/styles/index.css
+++ b/styles/index.css
@@ -105,6 +105,9 @@ body {
     font-size: 20px;
     margin-bottom: 10px;
 }
+.mapboxgl-popup-content {
+    color: black;
+}
 
 /* Spinner */
 /* .lds-spinner {
