--- a/styles/index.css
+++ b/styles/index.css
@@ -1,10 +1,14 @@
 /* apply a natural box layout model to all elements, but allowing components to change */
+
+
 /* html {
     box-sizing: border-box;
 }
 *, *:before, *:after {
     box-sizing: inherit;
 } */
+
+
 html, 
 body {
     color: white;
@@ -26,21 +30,19 @@ body {
     box-shadow: 0 0 30px #161616;
     width: 85%;
     margin: 0 auto;
+    display: flex;
+    justify-content: center;
 }
-.Wannabeer {
-    margin-bottom: 0;
-    font-size: 70px;
-    width: 40%;
-    margin: 0 auto;
-    margin-top: 570px;
-}
-.home-btn, .map-btn, .chart-btn {
+.home-btn, .map-btn, .chart-btn, #map1, #chart{
     color: white;
     background-color: #2f2f30;
     border: none;
+    margin-left: 20px;
 }
-.home-btn {
-    margin-left: 5px;
+.Wannabeer {
+    margin-bottom: 0;
+    margin: 0 auto;
+    text-align: center;
 }
 .body-container {
     position: relative;
@@ -57,7 +59,6 @@ body {
 }
 .list-of-brewers {
     border-style: solid;
-
 }
 .info {
     border-style: solid;
@@ -75,24 +76,30 @@ body {
     width: 80%;
     margin: 0 auto;
 }
+.footer-btn {
+    width: 20%;
+    margin: 0 auto;
+}
 .welcome {
-    font-size: 30px;
+    font-size: 50px;
     width: 40%;
     margin: 0 auto;
     margin-bottom: 50px;
     margin-top: 30px;
+    text-align: center;
 }
-.near-you {
+.near-you, #map1 {
+    font-size: 40px;
     width: 30%;
     margin: 0 auto;
     margin-bottom: 25px;
-    
+    text-align: center;
 }
-.beer-on {
+.beer-on, #chart {
     font-size: 20px;
     width: 30%;
     margin: 0 auto;
-
+    text-align: center;
 }
 .copy-right {
     font-size: 25px;
@@ -100,90 +107,15 @@ body {
     margin: 0 auto;
 }
 .about-btn, .contact-btn {
+    background-color: #2f2f30;
     color: white;
     font-size: 20px;
     margin-bottom: 10px;
+    border: none;
 }
 
-/* Spinner */
-/* .lds-spinner {
-    color: official;
-    display: inline-block;
-    position: relative;
-    width: 64px;
-    height: 64px;
-}
-.lds-spinner div {
-    transform-origin: 32px 32px;
-    animation: lds-spinner 1.2s linear infinite;
-}
-.lds-spinner div:after {
-    content: " ";
-    display: block;
-    position: absolute;
-    top: 3px;
-    left: 29px;
-    width: 5px;
-    height: 14px;
-    border-radius: 20%; */
-    /* background: #cef; */
-/* }
-.lds-spinner div:nth-child(1) {
-    transform: rotate(0deg);
-    animation-delay: -1.1s;
-}
-.lds-spinner div:nth-child(2) {
-    transform: rotate(30deg);
-    animation-delay: -1s;
-}
-.lds-spinner div:nth-child(3) {
-    transform: rotate(60deg);
-    animation-delay: -0.9s;
-}
-.lds-spinner div:nth-child(4) {
-    transform: rotate(90deg);
-    animation-delay: -0.8s;
-}
-.lds-spinner div:nth-child(5) {
-    transform: rotate(120deg);
-    animation-delay: -0.7s;
-}
-.lds-spinner div:nth-child(6) {
-    transform: rotate(150deg);
-    animation-delay: -0.6s;
-}
-.lds-spinner div:nth-child(7) {
-    transform: rotate(180deg);
-    animation-delay: -0.5s;
-}
-.lds-spinner div:nth-child(8) {
-    transform: rotate(210deg);
-    animation-delay: -0.4s;
-}
-.lds-spinner div:nth-child(9) {
-    transform: rotate(240deg);
-    animation-delay: -0.3s;
-}
-.lds-spinner div:nth-child(10) {
-    transform: rotate(270deg);
-    animation-delay: -0.2s;
-}
-.lds-spinner div:nth-child(11) {
-    transform: rotate(300deg);
-    animation-delay: -0.1s;
-}
-.lds-spinner div:nth-child(12) {
-    transform: rotate(330deg);
-    animation-delay: 0s;
-}
-@keyframes lds-spinner {
-    0% {
-    opacity: 1;
-}
-    100% {
-    opacity: 0;
-}
-} */
+
+
 
 
 @media screen and (min-width: 360px) {
@@ -197,8 +129,43 @@ body {
     }
     .map-container {
         height: 400px;
-        width: 300px;
+        width: 290px;
         margin: 0 auto;
+    }
+    .Wannabeer {
+        /* margin-top: 300px; */
+        font-size: 40px;
+    }
+    .arrow-container {
+        display: flex;
+        justify-content: center;
+        margin-top: 50px;
+        margin-bottom: 50px;
+    }
+    i {
+        border: solid white;
+        border-width: 0 10px 10px 0;
+        display: inline-block;
+        padding: 10px;
+    }
+    .down {
+        transform: rotate(45deg);
+        -webkit-transform: rotate(45deg);
+    }
+    .front-page {
+        margin-bottom: 130px;
+    }
+    .scroll-container {
+        display: flex;
+        justify-content: center;
+    }
+    .scroll {
+        font-size: 20px;
+    }
+    .front-page {
+        margin-top: 170px;
+        /* margin-bottom: 170px; */
+    }
 }
 
 @media screen and (min-width: 768px) {
@@ -210,6 +177,31 @@ body {
         height: 600px;
         width: 500px;
         margin: 0 auto;
+    }
+    .Wannabeer {
+        /* margin-top: 330px; */
+        font-size: 60px;
+        width: 30%
+    }
+    .arrow-container {
+        display: flex;
+        justify-content: center;
+        margin-top: 50px;
+        margin-bottom: 50px;
+    }
+    i {
+        border: solid white;
+        border-width: 0 20px 20px 0;
+        display: inline-block;
+        padding: 20px;
+    }
+    .down {
+        transform: rotate(45deg);
+        -webkit-transform: rotate(45deg);
+    }
+    .front-page {
+        margin-bottom: 70px; 
+    }
 }
 
 @media screen and (min-width: 1200px) {
@@ -221,4 +213,27 @@ body {
         height: 650px;
         width: 850px;
         margin: 0 auto;
+    }
+    .Wannabeer {
+        font-size: 90px;
+    }
+    .arrow-container {
+        display: flex;
+        justify-content: center;
+        margin-top: 50px;
+        margin-bottom: 50px;
+    }
+    i {
+        border: solid white;
+        border-width: 0 20px 20px 0;
+        display: inline-block;
+        padding: 20px;
+    }
+    .down {
+        transform: rotate(45deg);
+        -webkit-transform: rotate(45deg);
+    }
+    .front-page {
+        margin-bottom: 180px;
+    }
 }
