--- a/styles/index.css
+++ b/styles/index.css
@@ -52,15 +52,14 @@ body {
 .list-of-brewers {
     border-style: solid;
     border-width: 2px;
-    border-radius: 15px 15px 0px 0px;
     box-shadow: 0 0 30px #161616;
 }
 .info {
     border-style: solid;
     border-width: 2px;
-    border-radius: 0px 0px 15px 15px;
     box-shadow: 0 0 30px #161616;
-    overflow: scroll;
+    height: 300px;
+    overflow-y: scroll;
 }
 .list-of-brewers, .info {
     margin-bottom: 20px;
@@ -119,7 +118,7 @@ body {
 .mapboxgl-popup-content {
     color: black;
 }
-  
+
 @media screen and (min-width: 360px) {
     .body-container {
         width: 80%;
@@ -176,7 +175,6 @@ body {
         margin: 0 auto;
     }
 }
-}
 
 @media screen and (min-width: 768px) {
     .map {
@@ -219,7 +217,6 @@ body {
         width: 500px;
         margin: 0 auto;
     }
-}
 }
 
 @media screen and (min-width: 1200px) {
