--- a/styles/index.css
+++ b/styles/index.css
@@ -49,6 +49,12 @@ body {
     width: 85%;
     margin: 0 auto;
 }
+
+.body-container p{
+    text-align: center;
+    font-size: 20px;
+}
+
 .list-of-brewers {
     border-style: solid;
     border-width: 2px;
@@ -73,10 +79,13 @@ body {
     margin-top: 30px;
     width: 80%;
     margin: 0 auto;
+    text-align: center;
 }
 .footer-btn {
     width: 20%;
     margin: 0 auto;
+    display: inline;
+    justify-content: center;
 }
 .welcome {
     font-size: 50px;
@@ -102,6 +111,9 @@ body {
     font-size: 25px;
     width: 20%;
     margin: 0 auto;
+    display: inline;
+    text-align: center;
+    justify-content: center;
 }
 .about-btn, .contact-btn {
     background-color: #2f2f30;
